# proc-macro-testcase

./: Cargo.toml
src/: lib.rs
tests/: test.rs
